[package]
name = "iced-on-focus-widget"
authors = ["LegitCamper"]
description = "Subscribe to focus changes on widgets"
readme = "README.md"
repository = "https://github.com/LegitCamper/iced_on_focus_widget"
license = "MIT"
version = "0.1.1"
edition = "2021"
keywords = ["iced", "iced-widgets"]

[dependencies]
iced = { version = "0.13", features = ["advanced", "lazy"] }
